# causal-gpt-rl

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
causal_gpt_rl/: __init__.py
causal_gpt_rl/export/: __init__.py  onnx.py
causal_gpt_rl/inference/: __init__.py  adapters.py  bundle.py  checkpoint.py  runner.py  spaces.py  state_normalizer.py
causal_gpt_rl/model/: __init__.py  autoregressive_backbone.py  autoregressive_model.py  schema.py  spec_factory.py
collection/: README.md  build_minari.py
docs/: export-onnx.md  spaces.md
examples/: __init__.py  hub_quickstart.ipynb
examples/deploy/: __init__.py  mlagents.py  mujoco.py
examples/unity/: README.md  __init__.py  dungeon_escape_hf.ipynb  evaluate_matchup.py  evaluate_onnx.py  soccer_twos_hf.ipynb
examples/unity_collection/: README.md  calibrate_noise.py  collect.py  noisy_policy.py  (+3 more)
legal/: causalgpt-rl-aws-marketplace-product-specific-terms.md
scripts/: make_reference_action_fixture.py
serving/: Dockerfile  README.md  predictor.py  requirements.txt  serve.py
tests/: test_action_output_adapter.py  test_add_rows.py  test_bos_action_gate.py  test_bos_cache_mode.py  test_bundle_spaces.py  test_context_row_reset.py  test_continuous_first_layout.py  test_embedded_state_normalizer_bundle.py  test_fixture_hybrid_action_bundle.py  test_fixture_hybrid_bundle.py  test_l2_spaces.py  test_multibinary.py  test_onnx_export.py  test_partial_restart_parity.py  test_runtime_updates.py  test_state_input_adapter.py  test_unity_collection_multiagent.py  test_unity_onnx_bos_window.py
training/: README.md  __init__.py  hyperparameters.py
(+22 files in other folders)
